add landing features for top section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,43 @@
   <title>Houseplant</title>
   <meta name="author" content="Anne-Elise Chung" />
   <meta name="keywords" content="Chung, Anne-Elise, plants, plant, indoor, store" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script src="../js/index.js"></script>
+  <link rel="stylesheet" href="../css/index.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 </head>
 
 <body>
   <section class="container">
-    <a href="#"><img alt="houseplant logo" src="../images/logo.png" /></a>
+    <button class="mobile hamburger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </button>
+    <a class="header-item logo" href="#"><img alt="houseplant logo" src="../images/logo.png" /></a>
+    <a class="account header-item" href="#"><img alt="account" src="../images/mobile-account-icon.png" /></a>
+    <div class="desktop header-item desk-account">
+      <a class="sign-in" href="#">Sign In</a>
+      <a class="sign-up" href="#">Sign Up</a>
+    </div>
+    <ul class="slogans">
+      <li>
+        Grow A Garden
+      </li>
+      <li>
+        Green Your Thumbs
+      </li>
+      <li>
+        Grab A Gift
+      </li>
+    </ul>
+    <div class="CTA-landing">
+      <button class="CTA-3">
+        Take A Look
+      </button>
+    </div>
+
   </section>
 </body>
 
