add categories section and images

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 <body>
   <section class="container">
-    <button class="mobile hamburger">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-    </button>
+    <div class="header-item">
+      <button class="mobile hamburger">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+      </button>
+    </div>
     <a class="header-item logo" href="#"><img alt="houseplant logo" src="../images/logo.png" /></a>
     <a class="account header-item" href="#"><img alt="account" src="../images/mobile-account-icon.png" /></a>
     <div class="desktop header-item desk-account">
@@ -37,11 +39,30 @@
       </li>
     </ul>
     <div class="CTA-landing">
-      <button class="CTA-3">
+      <button class="CTA-large-green">
         Take A Look
       </button>
     </div>
-
+  </section>
+  <section class="categories-testimonial-container">
+    <div class="categories">
+      <a class="categ" href="#">
+        <img alt="plant gifts" src="../images/category-gift.png" />
+        <span>Gifts</span>
+      </a>
+      <a class="categ" href="#">
+        <img alt="easy to care plants" src="../images/category-easycare.png" />
+        <span>Easy Care</span>
+      </a>
+      <a class="categ" href="#">
+        <img alt="popular plants" src="../images/category-popular.png" />
+        <span>Popular</span>
+      </a>
+      <a class="categ" href="#">
+        <img alt="plants for sale" src="../images/category-sale.png" />
+        <span>Sale</span>
+      </a>
+    </div>
   </section>
 </body>
 
