constrain width for categories in wide screen

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
     <div class="categories">
       <a class="categ" href="#">
         <img alt="plant gifts" src="../images/category-gift.png" />
-        <span>Gifts</span>
+        Gifts
       </a>
       <a class="categ" href="#">
         <img alt="easy to care plants" src="../images/category-easycare.png" />
-        <span>Easy Care</span>
+        Easy Care
       </a>
       <a class="categ" href="#">
         <img alt="popular plants" src="../images/category-popular.png" />
-        <span>Popular</span>
+        Popular
       </a>
       <a class="categ" href="#">
         <img alt="plants for sale" src="../images/category-sale.png" />
-        <span>Sale</span>
+        Sale
       </a>
     </div>
   </section>
