gifts section responsive, add html for easy section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,48 @@
       <a href><img alt="Next" src="../images/next_icon.png" /></a>
     </div>
   </section>
+  <section class="desktop">
+    <div class=" landing-present">
+      <div class="gift-container">
+        <img alt="plant gifts" srcset="../images/landing_present.png" />
+        <div class="present-text">
+          <h2 class="h-present heading">A Perfect Present</h2>
+          <p class="p-present">
+            Find a gift for friends, family,<br /> and that special someone.
+          </p>
+          <button class="CTA-large-white">
+            Shop Gifts
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="desktop easy-container">
+    <div class=" landing-easy">
+      <img alt="wasy plants" srcset="../images/landing_easy.png" />
+      <div class="easy-text">
+        <h2 class="h-easy heading">Easy As...</h2>
+        <p class="p-easy">
+          Worried about keeping your new plant alive? We can help.
+        </p>
+      </div>
+    </div>
+    <div class="easy-info">
+      <h3>Find the plant that matches your environment and lifestyle.</h3>
+      <div class="care-icons">
+        <img alt="care icons" src="../images/sun_icon.png" />
+        <img alt="care icons" src="../images/soil_icon.png" />
+        <img alt="care icons" src="../images/water_icon.png" />
+        <img alt="care icons" src="../images/temp_icon.png" />
+      </div>
+      <p>
+        Shop for products based on their care needs.
+      </p>
+      <button class="CTA-large-green">
+        Try It Now
+      </button>
+    </div>
+  </section>
 </body>
 <footer>
   <script src="../js/jquery-3.3.1.js"></script>
