--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Houseplant</title>
   <meta name="author" content="Anne-Elise Chung" />
   <meta name="keywords" content="Chung, Anne-Elise, plants, plant, indoor, store" />
-  <link rel="stylesheet" href="../css/index.css" type="text/css" />
-  <link rel="stylesheet" href="../css/owl.carousel.css" type="text/css" />
-  <link rel="stylesheet" href="../css/owl.theme.default.css" type="text/css" />
+  <link rel="stylesheet" href="/css/index.css" type="text/css" />
+  <link rel="stylesheet" href="/css/owl.carousel.css" type="text/css" />
+  <link rel="stylesheet" href="/css/owl.theme.default.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 </head>
@@ -21,8 +21,8 @@
           <div class="bar3"></div>
       </button>
     </div>
-    <a class="header-item logo" href="#"><img alt="houseplant logo" src="../images/logo.png" /></a>
-    <a class="mobile account header-item" href="#"><img alt="account" src="../images/mobile-account-icon.png" /></a>
+    <a class="header-item logo" href="#"><img alt="houseplant logo" src="/images/logo.png" /></a>
+    <a class="mobile account header-item" href="#"><img alt="account" src="/images/mobile-account-icon.png" /></a>
     <div class="desktop header-item desk-account">
       <a class="sign-in" href="#">Sign In</a>
       <a class="sign-up" href="#">Sign Up</a>
@@ -47,29 +47,29 @@
   <section class="categories-container">
     <div class="categories">
       <a class="categ" href="#">
-        <img alt="plant gifts" src="../images/category-gift.png" />
+        <img alt="plant gifts" src="/images/category-gift.png" />
         Gifts
       </a>
       <a class="categ" href="#">
-        <img alt="easy to care plants" src="../images/category-easycare.png" />
+        <img alt="easy to care plants" src="/images/category-easycare.png" />
         Easy Care
       </a>
       <a class="categ" href="#">
-        <img alt="popular plants" src="../images/category-popular.png" />
+        <img alt="popular plants" src="/images/category-popular.png" />
         Popular
       </a>
       <a class="categ" href="#">
-        <img alt="plants for sale" src="../images/category-sale.png" />
+        <img alt="plants for sale" src="/images/category-sale.png" />
         Sale
       </a>
     </div>
   </section>
   <section class="testimonials-container">
     <div class="carousel-btn" id="testimonials-prev">
-      <a href><img alt="Previous" src="../images/prev_icon.png" /></a>
+      <a href><img alt="Previous" src="/images/prev_icon.png" /></a>
     </div>
     <div class="testimonials">
-      <div class="owl-carousel">
+      <div id="testimonials-carousel" class="owl-carousel">
         <div class="quote">
           <p>“I love everything I get from your store! All the plants are always healthy and packaged carefully. Thank you houseplant!”</p>
           <span class="who-quote">-Michelle S., Ojai, CA</span>
@@ -85,13 +85,13 @@
       </div>
     </div>
     <div class="carousel-btn owl-nav" id="testimonials-next">
-      <a href><img alt="Next" src="../images/next_icon.png" /></a>
+      <a href><img alt="Next" src="/images/next_icon.png" /></a>
     </div>
   </section>
   <section class="desktop">
-    <div class=" landing-present">
+    <div class="landing-present">
       <div class="gift-container">
-        <img alt="plant gifts" srcset="../images/landing_present.png" />
+        <img alt="plant gifts" srcset="/images/landing_present.png" />
         <div class="present-text">
           <h2 class="h-present heading">A Perfect Present</h2>
           <p class="p-present">
@@ -105,22 +105,24 @@
     </div>
   </section>
   <section class="desktop easy-container">
-    <div class=" landing-easy">
-      <img alt="wasy plants" srcset="../images/landing_easy.png" />
+    <div class="landing-easy">
+      <img alt="easy plants" srcset="/images/landing_easy.png" />
       <div class="easy-text">
         <h2 class="h-easy heading">Easy As...</h2>
         <p class="p-easy">
-          Worried about keeping your new plant alive? We can help.
+          Worried about keeping your <br />new plant alive? We can help.
         </p>
       </div>
     </div>
+  </section>
+  <section class="easy-info-container">
     <div class="easy-info">
       <h3>Find the plant that matches your environment and lifestyle.</h3>
       <div class="care-icons">
-        <img alt="care icons" src="../images/sun_icon.png" />
-        <img alt="care icons" src="../images/soil_icon.png" />
-        <img alt="care icons" src="../images/water_icon.png" />
-        <img alt="care icons" src="../images/temp_icon.png" />
+        <img alt="care icons" src="/images/sun_icon.png" />
+        <img alt="care icons" src="/images/soil_icon.png" />
+        <img alt="care icons" src="/images/water_icon.png" />
+        <img alt="care icons" src="/images/temp_icon.png" />
       </div>
       <p>
         Shop for products based on their care needs.
@@ -130,11 +132,93 @@
       </button>
     </div>
   </section>
+  <section class="instagram-brush-container">
+    <h4>Follow Us On Instagram</h4>
+    <div class="next-line-flex-container">
+      <img alt="instagram logo" src="/images/inst_logo.png" />
+      <h2 class="heading">@houseplant</h2>
+    </div>
+  </section>
+  <section class="instagram-carousel-container">
+    <div class="carousel-btn" id="insta-prev">
+      <a href><img alt="Previous" src="/images/prev_icon_green.png" /></a>
+    </div>
+    <div class="imagepics">
+      <div id="insta" class="owl-carousel">
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/1.png" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/2.png" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/3.jpg" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/4.png" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/5.png" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/6.jpg" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/7.jpg" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/8.png" />
+        </div>
+        <div class="insta-pic">
+          <img alt="instagram post" src="/images/image-carousel/9.jpg" />
+        </div>
+      </div>
+    </div>
+    <div class="carousel-btn owl-nav" id="insta-next">
+      <a href><img alt="Next" src="/images/next_icon_green.png" /></a>
+    </div>
+  </section>
+  <section class="last-awkward-bit">
+    <div class="bottom-text">
+      <h3>Use the #houseplant tag to show off your garden!</h3>
+    </div>
+  </section>
+  <section class="footer-container">
+    <div class="footer-flex-text">
+      <div class="footer-column-text">
+        <p>
+          Contact Us
+        </p>
+        <p>
+          FAQ
+        </p>
+      </div>
+      <div class="footer-column-text">
+        <p>
+          My Account
+        </p>
+        <p>
+          Help Center
+        </p>
+      </div>
+      <div class="footer-column-text">
+        <p>
+          Shop
+        </p>
+        <p>
+          Blog
+        </p>
+      </div>
+    </div>
+    <div class="footer-logo">
+      <img alt="logo" src="/images/logo.png" />
+    </div>
+  </section>
 </body>
 <footer>
-  <script src="../js/jquery-3.3.1.js"></script>
-  <script src="../js/owl.carousel.min.js"></script>
-  <script src="../js/index.js"></script>
+  <script src="/js/jquery-3.3.1.js"></script>
+  <script src="/js/owl.carousel.min.js"></script>
+  <script src="/js/index.js"></script>
 </footer>
 
 </html>
