fix reltive path for srcset

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section class="desktop">
     <div class="landing-present">
       <div class="gift-container">
-        <img alt="plant gifts" srcset="/images/landing_present.png" />
+        <img alt="plant gifts" srcset="images/landing_present.png" />
         <div class="present-text">
           <h2 class="h-present heading">A Perfect Present</h2>
           <p class="p-present">
@@ -106,7 +106,7 @@
   </section>
   <section class="desktop easy-container">
     <div class="landing-easy">
-      <img alt="easy plants" srcset="/images/landing_easy.png" />
+      <img alt="easy plants" srcset="images/landing_easy.png" />
       <div class="easy-text">
         <h2 class="h-easy heading">Easy As...</h2>
         <p class="p-easy">
