add all html files for checkout flow

--- a/product-page.html
+++ b/product-page.html
@@ -7,8 +7,8 @@
   <meta name="keywords" content="Chung, Anne-Elise, plants, plant, indoor, store, product-page" />
   <link rel="stylesheet" href="css/header.css" type="text/css" />
   <link rel="stylesheet" href="css/footer.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" />
-  <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css" /> -->
+  <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" />
+  <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 </head>
@@ -36,8 +36,8 @@
       <div class="header-menu">
         <a href="gallery.html" class="header-menu-item">SHOP</a>
         <a href="index.html" class="header-menu-item">HOME</a>
-        <a href="index.html" class="header-menu-item">BLOG</a>
-        <a href="index.html" class="header-menu-item">CONTACT</a>
+        <a href="index.html" class="desktop header-menu-item">BLOG</a>
+        <a href="index.html" class="desktop header-menu-item">CONTACT</a>
       </div>
     </div>
   </section>
@@ -75,7 +75,7 @@
 </body>
 <footer>
   <script src="js/jquery-3.3.1.js"></script>
-  <!-- <script src="js/owl.carousel.min.js"></script> -->
+  <script src="js/owl.carousel.min.js"></script>
   <script src="js/index.js"></script>
 </footer>
 
