complete billing html/css and shipping html

--- a/checkout_review_submit.html
+++ b/checkout_review_submit.html
@@ -39,6 +39,30 @@
       </div>
     </div>
   </section>
+
+
+  <section class="checkout-progress-container">
+    <div class="checkout-progress-top">
+      <p class="checkout-progress-text">
+        Address
+      </p>
+      <p class="checkout-progress-text">
+        Shipping and<br />Payment
+      </p>
+      <p class="checkout-progress-text">
+        Review and<br />Submit
+      </p>
+    </div>
+    <div class="checkout-progress-bottom">
+      <img alt="progress" src="images/checkout_progress3.png" />
+    </div>
+  </section>
+
+
+  <div class="billing-address">
+
+  </div>
+
   <section class="footer-container">
     <div class="footer-flex-text">
       <div class="footer-column-text">
@@ -73,7 +97,7 @@
 </body>
 <footer>
   <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/review.js"></script>
 </footer>
 
 </html>
