complete all checkout pages except for cart

--- a/checkout_billing.html
+++ b/checkout_billing.html
@@ -117,8 +117,9 @@
         </div>
       </div>
 
-      <button formaction="checkout_shipping_payment.html" name="next-shipping" class="CTA-large-green">Next : Shipping and Payment</button>
+
     </form>
+    <a href="checkout_shipping_payment.html"><button class="CTA-large-green">Next : Shipping and Payment</button></a>
   </section>
 
 
