--- a/checkout_review_submit.html
+++ b/checkout_review_submit.html
@@ -6,6 +6,8 @@
   <meta name="author" content="Anne-Elise Chung" />
   <meta name="keywords" content="Chung, Anne-Elise, plants, plant, indoor, store, product-page" />
   <link rel="stylesheet" href="css/header.css" type="text/css" />
+  <link rel="stylesheet" href="css/checkout.css" type="text/css" />
+  <link rel="stylesheet" href="css/review.css" type="text/css" />
   <link rel="stylesheet" href="css/footer.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
@@ -58,10 +60,126 @@
     </div>
   </section>
 
+  <section class="review-details-container">
+    <div class="review-details-column">
+      <h1 class="brush-header-small">Bill To</h1>
+      <div class="review-text-container">
+        <p class="billing-address">
+          Erika Green<br /> 5608 Folsom Street<br /> San Francisco, CA 94123<br />
+        </p>
+      </div>
+      <h1 class="brush-header-small">Contact</h1>
+      <div class="review-text-container">
+        <p class="contact-info">
+          egreen@gmail.com
+        </p>
+      </div>
+      <a href="checkout_billing.html"><button class="CTA-small-white">Edit</button></a>
+    </div>
+    <div class="green-line-column">
 
-  <div class="billing-address">
+    </div>
+    <div class="review-details-column">
+      <h1 class="brush-header-small">Ship To</h1>
+      <div class="review-text-container">
+        <p class="shipping-address">
+          Ship to Billing Address
+        </p>
+      </div>
+      <h1 class="brush-header-small">Shipping Method</h1>
+      <div class="review-text-container">
+        <p class="shipping-method">
+          <b>Estimated January 15th ($3.99)</b><br /> Standard Shipping (4-5 days)
+        </p>
+      </div>
+      <a href="checkout_shipping_payment.html"><button class="CTA-small-white">Edit</button></a>
+    </div>
+    <div class="green-line-column">
 
+    </div>
+    <div class="review-details-column">
+      <h1 class="brush-header-small">Payment</h1>
+      <div class="review-text-container">
+        <p class="payment">
+          Visa...4321 <br /> Exp: 03/2020
+        </p>
+      </div>
+      <a href="checkout_shipping_payment.html"><button class="CTA-small-white">Edit</button></a>
+    </div>
+  </section>
+
+  <div class="center-flex">
+    <a href="checkout_thank_you.html"><button class="CTA-large-green">Submit My Order</button></a>
   </div>
+
+  <section class="order-details-container">
+    <div class="order-details">
+      <div class="order-detail-left">
+        <div class="order-image">
+          <img alt="cart-item-image" src="images/cart_plant_item.png" />
+        </div>
+      </div>
+      <div class="order-detail-right">
+        <h2 class="order-header">'Tippy'</h2>
+        <p class="order-subheader">
+          Echeveria
+        </p>
+        <p class="item-price">
+          $4.50
+        </p>
+        <div class="plant-size-row">
+          <img alt="plant pot diameter 4 inches" src="images/pot_size_4_active.png" />
+          <img alt="plant pot diameter 4 inches" src="images/pot_size_6.png" />
+        </div>
+        <form class="quantity-spinner">
+          <img class="spinner-less" src="images/less_quantity_icon.png" />
+          <input type="number" type name="quantity" value="1" min="0" max="10" />
+          <img class="spinner-more " src="images/more_quantity_icon.png" />
+        </form>
+      </div>
+    </div>
+
+    <div class="order-summary">
+      <h3>Order Summary</h3>
+      <div class="summary-text">
+        <div class="summary-row">
+          <p>
+            Items:
+          </p>
+          <p>
+            $4.50
+          </p>
+        </div>
+        <div class="summary-row">
+          <p>
+            Shipping and Handling:
+          </p>
+          <p>
+            $3.99
+          </p>
+        </div>
+        <div class="summary-row">
+          <p>
+            Estimated Tax:
+          </p>
+          <p>
+            $1.70
+          </p>
+        </div>
+        <div class="green-line-row">
+
+        </div>
+        <div class="summary-row last-row">
+          <p class="total">
+            Order Total:
+          </p>
+          <p class="total">
+            $10.19
+          </p>
+        </div>
+
+      </div>
+  </section>
 
   <section class="footer-container">
     <div class="footer-flex-text">
