--- a/checkout_thank_you.html
+++ b/checkout_thank_you.html
@@ -6,6 +6,8 @@
   <meta name="author" content="Anne-Elise Chung" />
   <meta name="keywords" content="Chung, Anne-Elise, plants, plant, indoor, store, product-page" />
   <link rel="stylesheet" href="css/header.css" type="text/css" />
+  <link rel="stylesheet" href="css/checkout.css" type="text/css" />
+  <link rel="stylesheet" href="css/thanks.css" type="text/css" />
   <link rel="stylesheet" href="css/footer.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
@@ -39,6 +41,40 @@
       </div>
     </div>
   </section>
+
+  <section class="thanks-container">
+    <div class="brush" </section>
+      <h1 class="brush-header-white">Thanks for shopping with us!</h1>
+    </div>
+    <p class="thanks-text">
+      We’ve placed your order. <br /> An email confirmation is on its way to <br />
+      <b>egreen@gmail.com</b>.
+    </p>
+    <button class="CTA-large-green">Modify/Cancel Your Order</button>
+  </section>
+
+  <section class="sign-up-container">
+    <h1 class="brush-header">Checkout Even Faster Next Time</h1>
+    <p class="sub-header">
+      Create an account for faster and more convenient checkout,<br /> everytime you shop! Completely optional and free.
+    </p>
+    <form>
+      <div class="form-row">
+        <div class="text-box-size">
+          Email Address
+        </div>
+        <input type="text" name="email" value="">
+      </div>
+      <div class="form-row">
+        <div class="text-box-size">
+          Password
+        </div>
+        <input type="text" name="password">
+      </div>
+    </form>
+    <button class="CTA-large-white">Create Account</button>
+  </section>
+
   <section class="footer-container">
     <div class="footer-flex-text">
       <div class="footer-column-text">
@@ -73,7 +109,7 @@
 </body>
 <footer>
   <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/thanks.js"></script>
 </footer>
 
 </html>
