--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Anne-Elise Chung" />
   <meta name="keywords" content="Chung, Anne-Elise, plants, plant, indoor, store, product-page" />
   <link rel="stylesheet" href="css/header.css" type="text/css" />
+  <link rel="stylesheet" href="css/gallery.css" type="text/css" />
   <link rel="stylesheet" href="css/footer.css" type="text/css" />
   <!-- <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" />
   <link rel="stylesheet" href="css/owl.theme.default.css" type="text/css" /> -->
@@ -41,37 +42,337 @@
       </div>
     </div>
   </section>
-  <section class="footer-container">
-    <div class="footer-flex-text">
-      <div class="footer-column-text">
-        <p>
-          Contact Us
-        </p>
-        <p>
-          FAQ
+
+  <nav class="filter-menu-container">
+    <div class="filter-header-container">
+      <h2 class="filter-header">Product Type</h1>
+      <img alt="minimize icon" src="images/minimize_icon.png" />
+    </div>
+    <div class="filter-product-type-items">
+      <div class="filter-product-type-item">
+        <h5>Gifts</h5>
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Easy Care</h5>
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Most Popular</h5>
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Sale</h5>
+      </div>
+      <div class="filter-product-type-spacer">
+
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Cacti</h5>
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Succulents</h5>
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Ficus</h5>
+      </div>
+      <div class="filter-product-type-spacer">
+
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Pots</h5>
+      </div>
+      <div class="filter-product-type-item">
+        <h5>Soil</h5>
+      </div>
+      <div class="filter-product-type-spacer">
+
+      </div>
+    </div>
+    <div class="filter-header-container">
+      <h2 class="filter-header">Product Color</h1>
+      <img alt="minimize icon" src="images/minimize_icon.png" />
+    </div>
+    <div class="filter-product-type-colors">
+      <div class="color">
+        <img src="images/color_yellow.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_fuschia.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_green.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_blue.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_red.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_purple.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_teal.png" />
+      </div>
+      <div class="color">
+        <img src="images/color_pink.png" />
+      </div>
+    </div>
+    <div class="filter-header-container">
+      <h2 class="filter-header">Product Size</h1>
+      <img alt="minimize icon" src="images/minimize_icon.png" />
+    </div>
+    <div class="filter-size-container">
+      <div class="filter-size-row">
+        <img alt="size icon" src="images/filter_pot_size_2.png" />
+        <p class="filter-size-text">
+          2" diameter
         </p>
       </div>
-      <div class="footer-column-text">
-        <p>
-          My Account
-        </p>
-        <p>
-          Help Center
+      <div class="filter-size-row">
+        <img alt="size icon" src="images/filter_pot_size_4.png" />
+        <p class="filter-size-text">
+          4" diameter
         </p>
       </div>
-      <div class="footer-column-text">
-        <p>
-          Shop
+      <div class="filter-size-row">
+        <img alt="size icon" src="images/filter_pot_size_6.png" />
+        <p class="filter-size-text">
+          6" diameter
         </p>
-        <p>
-          Blog
+      </div>
+      <div class="filter-size-row">
+        <img alt="size icon" src="images/filter_pot_size_8.png" />
+        <p class="filter-size-text">
+          8" diameter
         </p>
       </div>
     </div>
-    <div class="footer-logo">
-      <img alt="logo" src="images/logo.png" />
+    <div class="filter-header-container">
+      <h2 class="filter-header">Price</h1>
+      <img alt="minimize icon" src="images/minimize_icon.png" />
     </div>
-  </section>
+    <div class="price-slider-container">
+
+    </div>
+  </nav>
+
+  <section class="main-gallery-container">
+      <div class="top-header">
+        <h1 class="brush-header">All Products</h1>
+        <!-- <h1 class="brush-header">Gifts</h1>
+        <h1 class="brush-header">Easy Care</h1>
+        <h1 class="brush-header">Most Popular</h1>
+        <h1 class="brush-header">Sale</h1>
+        <h1 class="brush-header">Cacti</h1>
+        <h1 class="brush-header">Succulents</h1>
+        <h1 class="brush-header">Ficus</h1>
+        <h1 class="brush-header">Pots</h1>
+        <h1 class="brush-header">Soil</h1> -->
+        <img alt="search icon" src="images/search_icon.png" />
+      </div>
+      <div class="items-container">
+          <div class="item">
+            <img alt="item image" src="images/item_klpa.png" />
+            <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    <div class="item">
+      <img alt="item image" src="images/item_klpa.png" />
+      <h2 class="item-title">'Key Lime Pie'</h2>
+      <h3 class="item-subtitle">Adromischus</h3>
+      <h4 class="item-price">$4.00</h4>
+      <div class="item-size-row">
+        <img alt="pot size 4 active" src="images/pot_size_4_active.png" />
+        <img alt="pot size 6" src="images/pot_size_6.png" />
+      </div>
+      <div class="button-row">
+        <button class="CTA-cart">Add to Cart</button>
+        <button class="CTA-wishlist"><img alt="heart icon" src="images/heart_icon.png" /></button>
+      </div>
+    </div>
+    </div>
+    </section>
+
+
+    <section class="footer-container">
+      <div class="footer-flex-text">
+        <div class="footer-column-text">
+          <p>
+            Contact Us
+          </p>
+          <p>
+            FAQ
+          </p>
+        </div>
+        <div class="footer-column-text">
+          <p>
+            My Account
+          </p>
+          <p>
+            Help Center
+          </p>
+        </div>
+        <div class="footer-column-text">
+          <p>
+            Shop
+          </p>
+          <p>
+            Blog
+          </p>
+        </div>
+      </div>
+      <div class="footer-logo">
+        <img alt="logo" src="images/logo.png" />
+      </div>
+    </section>
 </body>
 <footer>
   <script src="js/jquery-3.3.1.js"></script>
