setup css layout on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,7 @@
     </div>
   </section>
 
+<div class = "filter-and-main-container">
   <nav class="filter-menu-container">
     <div class="filter-header-container">
       <h2 class="filter-header">Product Type</h1>
@@ -167,7 +168,7 @@
         <h1 class="brush-header">Ficus</h1>
         <h1 class="brush-header">Pots</h1>
         <h1 class="brush-header">Soil</h1> -->
-        <img alt="search icon" src="images/search_icon.png" />
+        <img class= "search_icon" alt="search icon" src="images/search_icon.png" />
       </div>
       <div class="items-container">
           <div class="item">
@@ -340,7 +341,7 @@
     </div>
     </div>
     </section>
-
+</div>
 
     <section class="footer-container">
       <div class="footer-flex-text">
