gallery page complete js functionality for easy care filter interactions

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         Grab A Gift
       </li>
     </ul>
-    <div class="CTA-landing">
+    <a href="gallery.html" class="CTA-landing">
       <button class="CTA-large-green">
         Take A Look
       </button>
-    </div>
+    </a>
   </section>
   <section class="categories-container">
     <div class="categories">
