add curosr pointer to buttons and filter menu, add landing link on all houseplant logos for header on all pages

--- a/checkout_review_submit.html
+++ b/checkout_review_submit.html
@@ -25,9 +25,11 @@
           </button>
         </div>
       </div>
-      <div>
-        <img class="header-houseplant-logo" alt="houseplant-logo" src="images/logo.png" />
-      </div>
+      <a href="index.html">
+        <div>
+          <img class="header-houseplant-logo" alt="houseplant-logo" src="images/logo.png" />
+        </div>
+      </a>
       <div>
         <img class="header-cart" alt="cart" src="images/cart.png" />
       </div>
@@ -74,7 +76,7 @@
           egreen@gmail.com
         </p>
       </div>
-      <a href="checkout_billing.html"><button class="CTA-small-white">Edit</button></a>
+      <a href="checkout_billing.html"><button class="e2-small-white">Edit</button></a>
     </div>
     <div class="green-line-column">
 
@@ -92,7 +94,7 @@
           <b>Estimated January 15th ($3.99)</b><br /> Standard Shipping (4-5 days)
         </p>
       </div>
-      <a href="checkout_shipping_payment.html"><button class="CTA-small-white">Edit</button></a>
+      <a href="checkout_shipping_payment.html"><button class="e2-small-white">Edit</button></a>
     </div>
     <div class="green-line-column">
 
@@ -104,12 +106,12 @@
           Visa...4321 <br /> Exp: 03/2020
         </p>
       </div>
-      <a href="checkout_shipping_payment.html"><button class="CTA-small-white">Edit</button></a>
+      <a href="checkout_shipping_payment.html"><button class="e2-small-white">Edit</button></a>
     </div>
   </section>
 
   <div class="center-flex">
-    <a href="checkout_thank_you.html"><button class="CTA-large-green">Submit My Order</button></a>
+    <a href="checkout_thank_you.html"><button class="e2-large-green">Submit My Order</button></a>
   </div>
 
   <section class="order-details-container">
