--- a/product-page.html
+++ b/product-page.html
@@ -26,9 +26,11 @@
           </button>
         </div>
       </div>
-      <div>
-        <img class="header-houseplant-logo" alt="houseplant-logo" src="images/logo.png" />
-      </div>
+      <a href="index.html">
+        <div>
+          <img class="header-houseplant-logo" alt="houseplant-logo" src="images/logo.png" />
+        </div>
+      </a>
       <div>
         <img class="header-cart" alt="cart" src="images/cart.png" />
       </div>
